--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,16 @@
 package = "com.authorization.uksivt_scheduler">
 	<uses-permission android:name = "android.permission.INTERNET"/>
 	<uses-permission android:name = "android.permission.READ_EXTERNAL_STORAGE"/>
-	
+
 	<application
-	android:requestLegacyExternalStorage="true"
+	android:allowBackup = "true"
+	android:fullBackupContent = "true"
 	android:icon = "@mipmap/ic_launcher"
 	android:label = "@string/app_name"
+	android:requestLegacyExternalStorage = "true"
 	android:roundIcon = "@mipmap/ic_launcher_round"
 	android:supportsRtl = "true"
-	android:theme = "@style/Theme.РасписаниеУксивт"
-	android:fullBackupContent = "true"
-	android:allowBackup = "true">
+	android:theme = "@style/Theme.РасписаниеУксивт">
 		<activity
 		android:name = ".activities.MainActivity"
 		android:exported = "true">
@@ -24,36 +24,12 @@ package = "com.authorization.uksivt_scheduler">
 			</intent-filter>
 		</activity>
 
-		<activity
-		android:name = ".activities.SubFoldersActivity"
-		android:exported = "true">
-			<intent-filter>
-				<category android:name = "android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+		<activity android:name = ".activities.SubFoldersActivity"/>
 
-		<activity
-		android:name = ".activities.GroupsActivity"
-		android:exported = "true">
-			<intent-filter>
-				<category android:name = "android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+		<activity android:name = ".activities.GroupsActivity"/>
 
-		<activity
-		android:name = ".activities.DaySelectorActivity"
-		android:exported = "true">
-			<intent-filter>
-				<category android:name = "android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+		<activity android:name = ".activities.DaySelectorActivity"/>
 
-		<activity
-		android:name = ".activities.FinalScheduleActivity"
-		android:exported = "true">
-			<intent-filter>
-				<category android:name = "android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+		<activity android:name = ".activities.FinalScheduleActivity"/>
 	</application>
 </manifest>
