--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@ package = "com.authorization.uksivt_scheduler">
 	android:label = "@string/app_name"
 	android:roundIcon = "@mipmap/ic_launcher_round"
 	android:supportsRtl = "true"
-	android:theme = "@style/Theme.РасписаниеУксивт">
+	android:theme = "@style/Theme.РасписаниеУксивт"
+	android:usesCleartextTraffic = "true">
 		<activity
 		android:name = ".activities.MainActivity"
 		android:exported = "true">
