--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,12 @@ plugins
 
 android
 {
-    packagingOptions
-    {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt',
+                         'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt',
+                         'META-INF/notice.txt', 'META-INF/ASL2.0']
+        }
     }
 
     compileSdk 31
@@ -41,8 +37,8 @@ android
 
     compileOptions
     {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -52,7 +48,7 @@ dependencies
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'joda-time:joda-time:2.10.13'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
-    implementation 'org.jsoup:jsoup:1.13.1'
-    implementation "org.apache.poi:poi-ooxml:5.1.0"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'org.apache.poi:poi-ooxml:5.2.1'
 }
