Added favorite groups list.
Soon i will add possibility to get schedule right from favorite menu, without search needed group in general list.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@ package = "com.authorization.uksivt_scheduler">
 			</intent-filter>
 		</activity>
 
+		<activity android:name = ".activities.FavoritesActivity"/>
+
 		<activity android:name = ".activities.SubFoldersActivity"/>
-
 		<activity android:name = ".activities.GroupsActivity"/>
-
 		<activity android:name = ".activities.DaySelectorActivity"/>
 
 		<activity android:name = ".activities.FinalScheduleActivity"/>
